Models and metrics filter

--- a/proof_of_concept.ipynb
+++ b/proof_of_concept.ipynb
@@ -113,7 +113,6 @@
       "SeasonalMovingAverage\n",
       "\n",
       " Evaluating models\n",
-      "mse\n",
       "mape\n",
       "smape\n",
       "mase\n",
@@ -153,7 +152,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>mse</th>\n",
        "      <th>mape</th>\n",
        "      <th>smape</th>\n",
        "      <th>mase</th>\n",
@@ -163,7 +161,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Naive</th>\n",
-       "      <td>6.963809e+05</td>\n",
        "      <td>14.587706</td>\n",
        "      <td>12.554884</td>\n",
        "      <td>154.674149</td>\n",
@@ -171,7 +168,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SeasonalNaive</th>\n",
-       "      <td>1.039355e+06</td>\n",
        "      <td>16.363638</td>\n",
        "      <td>14.468293</td>\n",
        "      <td>212.723064</td>\n",
@@ -179,7 +175,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Naive2</th>\n",
-       "      <td>5.637344e+05</td>\n",
        "      <td>11.431736</td>\n",
        "      <td>10.404474</td>\n",
        "      <td>132.266144</td>\n",
@@ -187,7 +182,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RandomWalkDrift</th>\n",
-       "      <td>6.882889e+05</td>\n",
        "      <td>15.068192</td>\n",
        "      <td>12.940476</td>\n",
        "      <td>150.544054</td>\n",
@@ -195,7 +189,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Croston</th>\n",
-       "      <td>6.987386e+05</td>\n",
        "      <td>14.547862</td>\n",
        "      <td>13.050489</td>\n",
        "      <td>188.319747</td>\n",
@@ -203,7 +196,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MovingAverage</th>\n",
-       "      <td>7.025456e+05</td>\n",
        "      <td>15.227935</td>\n",
        "      <td>13.655002</td>\n",
        "      <td>199.849112</td>\n",
@@ -211,7 +203,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SeasonalMovingAverage</th>\n",
-       "      <td>1.188825e+06</td>\n",
        "      <td>18.185127</td>\n",
        "      <td>15.546451</td>\n",
        "      <td>226.685040</td>\n",
@@ -222,23 +213,14 @@
        "</div>"
       ],
       "text/plain": [
-       "                                mse       mape      smape        mase  \\\n",
-       "Naive                  6.963809e+05  14.587706  12.554884  154.674149   \n",
-       "SeasonalNaive          1.039355e+06  16.363638  14.468293  212.723064   \n",
-       "Naive2                 5.637344e+05  11.431736  10.404474  132.266144   \n",
-       "RandomWalkDrift        6.882889e+05  15.068192  12.940476  150.544054   \n",
-       "Croston                6.987386e+05  14.547862  13.050489  188.319747   \n",
-       "MovingAverage          7.025456e+05  15.227935  13.655002  199.849112   \n",
-       "SeasonalMovingAverage  1.188825e+06  18.185127  15.546451  226.685040   \n",
-       "\n",
-       "                            rmsse  \n",
-       "Naive                  136.386826  \n",
-       "SeasonalNaive          190.695496  \n",
-       "Naive2                 121.989494  \n",
-       "RandomWalkDrift        133.972818  \n",
-       "Croston                163.158629  \n",
-       "MovingAverage          172.896039  \n",
-       "SeasonalMovingAverage  200.534507  "
+       "                            mape      smape        mase       rmsse\n",
+       "Naive                  14.587706  12.554884  154.674149  136.386826\n",
+       "SeasonalNaive          16.363638  14.468293  212.723064  190.695496\n",
+       "Naive2                 11.431736  10.404474  132.266144  121.989494\n",
+       "RandomWalkDrift        15.068192  12.940476  150.544054  133.972818\n",
+       "Croston                14.547862  13.050489  188.319747  163.158629\n",
+       "MovingAverage          15.227935  13.655002  199.849112  172.896039\n",
+       "SeasonalMovingAverage  18.185127  15.546451  226.685040  200.534507"
       ]
      },
      "execution_count": 3,
@@ -280,6 +262,10 @@
     "    \n",
     "    metrics = {'mse': mse, 'mape': mape, 'smape': smape, \n",
     "               'mase': mase, 'rmsse': rmsse}\n",
+    "    \n",
+    "    # Filtered models and metrics\n",
+    "    models = {model_name: models[model_name] for model_name in models_filter}\n",
+    "    metrics = {metric_name: metrics[metric_name] for metric_name in metrics_filter}\n",
     "    \n",
     "    # Read data\n",
     "    X_train_df, y_train_df, X_test_df, y_test_df = M4_parser(dataset_name, num_obs)\n",
@@ -335,9 +321,13 @@
     "\n",
     "# Grid Plot\n",
     "dataset_name = 'Monthly'\n",
+    "models_filter = ['Naive', 'SeasonalNaive', 'Naive2',\n",
+    "                 'RandomWalkDrift', 'Croston', 'MovingAverage', 'SeasonalMovingAverage']\n",
+    "# models_filter = ['RandomWalkDrift', 'Croston', 'MovingAverage', 'SeasonalMovingAverage']\n",
+    "metrics_filter = ['mape', 'smape', 'mase', 'rmsse']\n",
     "\n",
     "y_df, metrics = ml_pipeline(dataset_name=dataset_name, num_obs=8, \n",
-    "                            models_filter=[1,2,3], metrics_filter=[1,2,3])\n",
+    "                            models_filter=models_filter, metrics_filter=metrics_filter)\n",
     "\n",
     "uids = ['M1', 'M2', 'M3', 'M4','M5', 'M6', 'M7', 'M8']\n",
     "plot_grid_series(y_df, uids)\n",
