Idea for button filter

--- a/proof_of_concept.ipynb
+++ b/proof_of_concept.ipynb
@@ -246,11 +246,11 @@
     "             'Yearly': {'seasonality': 1, 'input_size': 4,\n",
     "                        'output_size': 6}}\n",
     "\n",
-    "def ml_pipeline(dataset_name, num_obs, models_filter, metrics_filter):\n",
+    "def button_filter(dataset_name, models_filter, metrics_filter):\n",
     "    # Parse arguments\n",
     "    h = seas_dict[dataset_name]['output_size']\n",
     "    seasonality = seas_dict[dataset_name]['seasonality']\n",
-    "\n",
+    "    \n",
     "    models = {'Naive':  Naive(h=h),\n",
     "              'SeasonalNaive': SeasonalNaive(h=h, seasonality=seasonality),\n",
     "              'Naive2': Naive2(h=h, seasonality=seasonality),\n",
@@ -266,6 +266,13 @@
     "    # Filtered models and metrics\n",
     "    models = {model_name: models[model_name] for model_name in models_filter}\n",
     "    metrics = {metric_name: metrics[metric_name] for metric_name in metrics_filter}\n",
+    "    \n",
+    "    return models, metrics\n",
+    "\n",
+    "def ml_pipeline(dataset_name, num_obs, models, metrics):\n",
+    "    # Parse arguments\n",
+    "    h = seas_dict[dataset_name]['output_size']\n",
+    "    seasonality = seas_dict[dataset_name]['seasonality']\n",
     "    \n",
     "    # Read data\n",
     "    X_train_df, y_train_df, X_test_df, y_test_df = M4_parser(dataset_name, num_obs)\n",
@@ -326,8 +333,10 @@
     "# models_filter = ['RandomWalkDrift', 'Croston', 'MovingAverage', 'SeasonalMovingAverage']\n",
     "metrics_filter = ['mape', 'smape', 'mase', 'rmsse']\n",
     "\n",
+    "models, metrics = button_filter(dataset_name, models_filter, metrics_filter)\n",
+    "\n",
     "y_df, metrics = ml_pipeline(dataset_name=dataset_name, num_obs=8, \n",
-    "                            models_filter=models_filter, metrics_filter=metrics_filter)\n",
+    "                            models=models, metrics=metrics)\n",
     "\n",
     "uids = ['M1', 'M2', 'M3', 'M4','M5', 'M6', 'M7', 'M8']\n",
     "plot_grid_series(y_df, uids)\n",
