Encapsulated metric evaluation, and added pca_rank

--- a/proof_of_concept.ipynb
+++ b/proof_of_concept.ipynb
@@ -133,6 +133,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "def compute_evaluations(y_test, y_hat, y_train, metrics, seasonality):    \n",
+    "    print(\"\\n Evaluating models\")\n",
+    "    evaluations = {}\n",
+    "    for metric_name, metric in metrics.items():\n",
+    "        print(metric_name)\n",
+    "        for col in y_hat.columns:\n",
+    "            mod_evaluation = evaluate_panel(y_test=y_test, y_hat=y_hat[col],\n",
+    "                                            y_train=y_train, metric=metric,\n",
+    "                                            seasonality=seasonality)\n",
+    "            mod_evaluation.name = y_hat[col].name\n",
+    "\n",
+    "            if not (metric_name in evaluations.keys()):\n",
+    "                evaluations[metric_name] = [mod_evaluation]\n",
+    "            else:\n",
+    "                evaluations[metric_name].append(mod_evaluation)\n",
+    "    \n",
+    "    # Collapse Metrics\n",
+    "    for metric_name, metric in metrics.items():\n",
+    "        evaluations[metric_name] = pd.concat(evaluations[metric_name], axis=1)\n",
+    "        evaluations[metric_name] = evaluations[metric_name].mean(axis=0)\n",
+    "    \n",
+    "    evaluations = pd.DataFrame.from_dict(evaluations)\n",
+    "    \n",
+    "    # PCA rank\n",
+    "    X = evaluations.values\n",
+    "    pca = PCA(n_components=1)\n",
+    "    pca.fit(X)\n",
+    "    evaluations['pca_rank'] = pca.fit_transform(X)\n",
+    "    evaluations['pca_rank'] = evaluations['pca_rank'].rank(ascending=False)\n",
+    "    evaluations['pca_rank'] = evaluations['pca_rank'].astype(int)\n",
+    "    \n",
+    "    evaluations.sort_values(by='pca_rank', inplace=True)\n",
+    "    return evaluations\n",
+    "\n",
     "def ml_pipeline(dataset_name, num_obs, models, metrics):\n",
     "    # Parse arguments\n",
     "    h = seas_dict[dataset_name]['output_size']\n",
@@ -168,28 +204,11 @@
     "    y_df = y_train_df.append(y_hat_df, sort=False)\n",
     "    \n",
     "    # Evaluation Metrics\n",
-    "    evaluations = {}\n",
-    "    print(\"\\n Evaluating models\")\n",
-    "    for metric_name, metric in metrics.items():\n",
-    "        print(metric_name)\n",
-    "        for mod_preds in preds[1:]:\n",
-    "            mod_evaluation = evaluate_panel(y_test=y_test_df, y_hat=mod_preds,\n",
-    "                                            y_train=y_train_df, metric=metric,\n",
-    "                                            seasonality=seasonality)\n",
-    "            mod_evaluation.name = mod_preds.name\n",
-    "\n",
-    "            if not (metric_name in evaluations.keys()):\n",
-    "                evaluations[metric_name] = [mod_evaluation]\n",
-    "            else:\n",
-    "                evaluations[metric_name].append(mod_evaluation)\n",
-    "    \n",
-    "    # Collapse Metrics\n",
-    "    for metric_name, metric in metrics.items():\n",
-    "        evaluations[metric_name] = pd.concat(evaluations[metric_name], axis=1)\n",
-    "        evaluations[metric_name] = evaluations[metric_name].mean(axis=0)\n",
-    "    \n",
-    "    evaluations = pd.DataFrame.from_dict(evaluations)\n",
-    "    return y_df, evaluations\n"
+    "    y_hat_df = y_hat_df.drop(['split', 'y'], axis=1)\n",
+    "    evaluations = compute_evaluations(y_test=y_test_df, y_hat=y_hat_df, \n",
+    "                                      y_train=y_train_df, metrics=metrics, \n",
+    "                                      seasonality=seasonality)\n",
+    "    return y_df, y_hat_df, evaluations\n"
    ]
   },
   {
@@ -252,6 +271,7 @@
        "      <th>smape</th>\n",
        "      <th>mase</th>\n",
        "      <th>rmsse</th>\n",
+       "      <th>pca_rank</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -261,20 +281,7 @@
        "      <td>7.389714</td>\n",
        "      <td>156.181526</td>\n",
        "      <td>121.964740</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Croston</th>\n",
-       "      <td>8.680239</td>\n",
-       "      <td>9.295579</td>\n",
-       "      <td>205.620314</td>\n",
-       "      <td>156.861786</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MovingAverage</th>\n",
-       "      <td>9.531116</td>\n",
-       "      <td>10.132065</td>\n",
-       "      <td>224.610488</td>\n",
-       "      <td>169.538095</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>SeasonalMovingAverage</th>\n",
@@ -282,17 +289,34 @@
        "      <td>9.987359</td>\n",
        "      <td>196.624595</td>\n",
        "      <td>152.233273</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Croston</th>\n",
+       "      <td>8.680239</td>\n",
+       "      <td>9.295579</td>\n",
+       "      <td>205.620314</td>\n",
+       "      <td>156.861786</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MovingAverage</th>\n",
+       "      <td>9.531116</td>\n",
+       "      <td>10.132065</td>\n",
+       "      <td>224.610488</td>\n",
+       "      <td>169.538095</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           mape      smape        mase       rmsse\n",
-       "RandomWalkDrift        7.268141   7.389714  156.181526  121.964740\n",
-       "Croston                8.680239   9.295579  205.620314  156.861786\n",
-       "MovingAverage          9.531116  10.132065  224.610488  169.538095\n",
-       "SeasonalMovingAverage  9.552721   9.987359  196.624595  152.233273"
+       "                           mape      smape        mase       rmsse  pca_rank\n",
+       "RandomWalkDrift        7.268141   7.389714  156.181526  121.964740         1\n",
+       "SeasonalMovingAverage  9.552721   9.987359  196.624595  152.233273         2\n",
+       "Croston                8.680239   9.295579  205.620314  156.861786         3\n",
+       "MovingAverage          9.531116  10.132065  224.610488  169.538095         4"
       ]
      },
      "execution_count": 5,
@@ -314,207 +338,13 @@
     "models, metrics = button_models_metrics_filter(dataset_name, models_filter, metrics_filter)\n",
     "\n",
     "# run ml_pipeline\n",
-    "y_df, metrics = ml_pipeline(dataset_name=dataset_name, num_obs=num_obs, \n",
+    "y_df, y_hat_df, metrics = ml_pipeline(dataset_name=dataset_name, num_obs=num_obs, \n",
     "                            models=models, metrics=metrics)\n",
     "\n",
     "uids_sample = button_uids_filter(y_df, size=8)\n",
     "\n",
     "plot_grid_series(y_df, uids_sample, models)\n",
     "metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>y</th>\n",
-       "      <th>split</th>\n",
-       "      <th>RandomWalkDrift</th>\n",
-       "      <th>Croston</th>\n",
-       "      <th>MovingAverage</th>\n",
-       "      <th>SeasonalMovingAverage</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>unique_id</th>\n",
-       "      <th>ds</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">D1</th>\n",
-       "      <th>1970-01-01</th>\n",
-       "      <td>1017.10</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1970-01-02</th>\n",
-       "      <td>1019.30</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1970-01-03</th>\n",
-       "      <td>1017.00</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1970-01-04</th>\n",
-       "      <td>1019.20</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1970-01-05</th>\n",
-       "      <td>1018.70</td>\n",
-       "      <td>train</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">D8</th>\n",
-       "      <th>1972-10-05</th>\n",
-       "      <td>1735.54</td>\n",
-       "      <td>test</td>\n",
-       "      <td>1739.301122</td>\n",
-       "      <td>1715.924842</td>\n",
-       "      <td>1713.648</td>\n",
-       "      <td>1731.180</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1972-10-06</th>\n",
-       "      <td>1739.46</td>\n",
-       "      <td>test</td>\n",
-       "      <td>1740.027234</td>\n",
-       "      <td>1715.924842</td>\n",
-       "      <td>1713.648</td>\n",
-       "      <td>1731.615</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1972-10-07</th>\n",
-       "      <td>1734.69</td>\n",
-       "      <td>test</td>\n",
-       "      <td>1740.753347</td>\n",
-       "      <td>1715.924842</td>\n",
-       "      <td>1713.648</td>\n",
-       "      <td>1730.195</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1972-10-08</th>\n",
-       "      <td>1732.07</td>\n",
-       "      <td>test</td>\n",
-       "      <td>1741.479459</td>\n",
-       "      <td>1715.924842</td>\n",
-       "      <td>1713.648</td>\n",
-       "      <td>1728.715</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1972-10-09</th>\n",
-       "      <td>1730.44</td>\n",
-       "      <td>test</td>\n",
-       "      <td>1742.205571</td>\n",
-       "      <td>1715.924842</td>\n",
-       "      <td>1713.648</td>\n",
-       "      <td>1733.185</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5590 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            y  split  RandomWalkDrift      Croston  \\\n",
-       "unique_id ds                                                         \n",
-       "D1        1970-01-01  1017.10  train              NaN          NaN   \n",
-       "          1970-01-02  1019.30  train              NaN          NaN   \n",
-       "          1970-01-03  1017.00  train              NaN          NaN   \n",
-       "          1970-01-04  1019.20  train              NaN          NaN   \n",
-       "          1970-01-05  1018.70  train              NaN          NaN   \n",
-       "...                       ...    ...              ...          ...   \n",
-       "D8        1972-10-05  1735.54   test      1739.301122  1715.924842   \n",
-       "          1972-10-06  1739.46   test      1740.027234  1715.924842   \n",
-       "          1972-10-07  1734.69   test      1740.753347  1715.924842   \n",
-       "          1972-10-08  1732.07   test      1741.479459  1715.924842   \n",
-       "          1972-10-09  1730.44   test      1742.205571  1715.924842   \n",
-       "\n",
-       "                      MovingAverage  SeasonalMovingAverage  \n",
-       "unique_id ds                                                \n",
-       "D1        1970-01-01            NaN                    NaN  \n",
-       "          1970-01-02            NaN                    NaN  \n",
-       "          1970-01-03            NaN                    NaN  \n",
-       "          1970-01-04            NaN                    NaN  \n",
-       "          1970-01-05            NaN                    NaN  \n",
-       "...                             ...                    ...  \n",
-       "D8        1972-10-05       1713.648               1731.180  \n",
-       "          1972-10-06       1713.648               1731.615  \n",
-       "          1972-10-07       1713.648               1730.195  \n",
-       "          1972-10-08       1713.648               1728.715  \n",
-       "          1972-10-09       1713.648               1733.185  \n",
-       "\n",
-       "[5590 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_df"
    ]
   },
   {
