wrapping ml code

--- a/proof_of_concept.ipynb
+++ b/proof_of_concept.ipynb
@@ -10,7 +10,7 @@
     "sys.path.append('./src/')\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -19,85 +19,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from pandas.plotting import register_matplotlib_converters\n",
-    "register_matplotlib_converters()\n",
-    "\n",
-    "# https://python-graph-gallery.com/100-calling-a-color-with-seaborn/\n",
-    "model_colors = {'Naive': '#51DBE6',\n",
-    "                'SeasonalNaive': '#FA6F94',\n",
-    "                'Naive2': 'green',\n",
-    "                'RandomWalkDrift': 'maroon',\n",
-    "                'Croston': 'black',\n",
-    "                'MovingAverage': 'purple',\n",
-    "                'SeasonalMovingAverage': 'blue'}\n",
-    "\n",
-    "def plot_single_serie(uid_df, title, ax, models, plt_h=60):\n",
-    "    \"\"\"\n",
-    "    uid_df: pandas df\n",
-    "    panel with columns unique_id, ds, y, split\n",
-    "    y_hat_df: pandas df\n",
-    "    panel with columns unique_id, ds, y_hat\n",
-    "    \"\"\"\n",
-    "    # parse uid_df\n",
-    "    uid_df.reset_index(inplace=True)\n",
-    "    \n",
-    "    # plot last 60 observations of actual date\n",
-    "    sns.lineplot(x='ds', y='y',\n",
-    "                 hue='split', data=uid_df[-plt_h:], ax=ax)\n",
-    "    \n",
-    "    # plot fitted models\n",
-    "    for model_name in models.keys():\n",
-    "        sns.lineplot(x='ds', y=model_name,\n",
-    "                     color=model_colors[model_name], data=uid_df[-plt_h:],\n",
-    "                     ax=ax, label=model_name)\n",
-    "    \n",
-    "    # rotate x axis\n",
-    "    ax.tick_params(axis='x', rotation=45)\n",
-    "    ax.tick_params(axis='y')\n",
-    "    ax.set_xlabel('Date Stamp')\n",
-    "    ax.set_ylabel('Value')\n",
-    "    ax.set_title(title)\n",
-    "    \n",
-    "    # remove legend title\n",
-    "    handles, labels = ax.get_legend_handles_labels()\n",
-    "    ax.legend(handles=handles[1:], labels=labels[1:])\n",
-    "\n",
-    "def plot_grid_series(y, uids, models):\n",
-    "    assert len(uids)==8\n",
-    "    \n",
-    "    fig, axs = plt.subplots(2, 4, figsize=(20, 7))\n",
-    "    plt.subplots_adjust(wspace=0.35)\n",
-    "    plt.subplots_adjust(hspace=0.4)\n",
-    "    plt.xticks(rotation=45)\n",
-    "\n",
-    "    for i, uid in enumerate(uids):\n",
-    "        # single plot parameters\n",
-    "        uid_df = y.loc[uid]\n",
-    "        row = int(np.round(i/8 + 0.001))\n",
-    "        col = i % 4\n",
-    "        \n",
-    "        plot_single_serie(uid_df, title=uid, ax=axs[row, col], models=models)\n",
-    "    \n",
-    "    fig.tight_layout()\n",
-    "    plt.show()\n",
-    "    plot_file = \"./results/grid_series.png\"\n",
-    "    plt.savefig(plot_file, bbox_inches = \"tight\", dpi=300)\n",
-    "    plt.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.benchmarks import *\n",
-    "from src.utils_data import m4_parser, seas_dict\n",
-    "from src.utils_evaluation import *\n",
-    "\n",
     "def button_models_metrics_filter(dataset_name, models_filter, metrics_filter):\n",
     "    # Parse arguments\n",
     "    h = seas_dict[dataset_name]['output_size']\n",
@@ -129,45 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.decomposition import PCA\n",
-    "\n",
-    "def compute_evaluations(y_test, y_hat, y_train, metrics, seasonality):    \n",
-    "    print(\"\\n Evaluating models\")\n",
-    "    evaluations = {}\n",
-    "    for metric_name, metric in metrics.items():\n",
-    "        print(metric_name)\n",
-    "        for col in y_hat.columns:\n",
-    "            mod_evaluation = evaluate_panel(y_test=y_test, y_hat=y_hat[col],\n",
-    "                                            y_train=y_train, metric=metric,\n",
-    "                                            seasonality=seasonality)\n",
-    "            mod_evaluation.name = y_hat[col].name\n",
-    "\n",
-    "            if not (metric_name in evaluations.keys()):\n",
-    "                evaluations[metric_name] = [mod_evaluation]\n",
-    "            else:\n",
-    "                evaluations[metric_name].append(mod_evaluation)\n",
-    "    \n",
-    "    # Collapse Metrics\n",
-    "    for metric_name, metric in metrics.items():\n",
-    "        evaluations[metric_name] = pd.concat(evaluations[metric_name], axis=1)\n",
-    "        evaluations[metric_name] = evaluations[metric_name].mean(axis=0)\n",
-    "    \n",
-    "    evaluations = pd.DataFrame.from_dict(evaluations)\n",
-    "    \n",
-    "    # PCA rank\n",
-    "    X = evaluations.values\n",
-    "    pca = PCA(n_components=1)\n",
-    "    pca.fit(X)\n",
-    "    evaluations['pca_rank'] = pca.fit_transform(X)\n",
-    "    evaluations['pca_rank'] = evaluations['pca_rank'].rank(ascending=False)\n",
-    "    evaluations['pca_rank'] = evaluations['pca_rank'].astype(int)\n",
-    "    \n",
-    "    evaluations.sort_values(by='pca_rank', inplace=True)\n",
-    "    return evaluations\n",
+    "from src.benchmarks import *\n",
+    "from src.utils_data import m4_parser, seas_dict\n",
+    "from src.utils_evaluation import *\n",
+    "from src.utils_visualization import plot_grid_series\n",
     "\n",
     "def ml_pipeline(dataset_name, num_obs, models, metrics):\n",
     "    # Parse arguments\n",
@@ -213,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +209,7 @@
        "MovingAverage          9.531116  10.132065  224.610488  169.538095         4"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
